# history-essay-rag-mcp

./: .env.example  .gitignore  README.md  mcp_config.json  pyproject.toml
data/chunks/: chunks.json  chunks.jsonl
data/eval/: eval_queries.json  eval_results.json
data/raw_json/: final_2015_v3.json  final_2016_v3.json  final_2017_v3.json  final_2018_v3.json  final_2021_v3.json  final_2022_v3.json  final_2023_v3.json  final_2024_v3.json  history_essay_reports_all.csv  reg_2015_v3.json  reg_2016_v3.json  reg_2017_v3.json  reg_2018_v3.json  reg_2019_v3.json  reg_2020_v3.json  reg_2021_v3.json  reg_2022_v3.json  reg_2023_v3.json
data/vectorstore/qdrant/: meta.json
notebooks/: 1_ingest.ipynb  2_search_demo.ipynb  3_agent_demo.ipynb  eval_report.md
prompts/: pdf_to_history_essay_json_system_prompt_v3.md  user_prompt.md
src/hw_rag_mcp/: __init__.py  mcp_server.py  settings.py
src/hw_rag_mcp/chunks/: build_chunks.py  schemas.py
src/hw_rag_mcp/search_service/: models.py  service.py
src/hw_rag_mcp/vectorstore/: embedding_model_port.py  models.py  qdrant_indexer.py
