[project]
name = "hw-rag-mcp"
version = "0.1.0"
description = "RAG knowledge base with Qdrant index and MCP agent demo"
readme = "README.md"
authors = [
    { name = "blenlkj", email = "sblenlkj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.0",
    "langchain>=1.2.17",
    "langchain-gigachat>=0.5.1",
    "langchain-mcp-adapters>=0.2.2",
    "langfuse>=4.7.1",
    "langgraph>=1.1.10",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.9.0",
]

[project.scripts]
history-essay-mcp = "hw_rag_mcp.mcp_server:mcp.run"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"